.env.example history url data

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,12 @@ API_OPENWEATHER_URL_BASE= https://api.openweathermap.org/data/2.5/weather?q=
 API_OPENWEATHER_URL_APPID= &appid=
 API_OPENWEATHER_URL_PARAMS= &units=metric&lang=ES
 
+API_OPENWEATHER_HISTORY_URL_BASE= https://api.openweathermap.org/data/2.5/onecall/timemachine?
+API_OPENWEATHER_HISTORY_URL_LAT= lat=
+API_OPENWEATHER_HISTORY_URL_LON= &lon=
+API_OPENWEATHER_HISTORY_URL_DT= &dt=
+API_OPENWEATHER_HISTORY_URL_APPID= &appid=
+
 API_KEY=2f291b8d42eb71d88a7fdaedea524995
 API_KEY_2=4d8fb5b93d4af21d66a2948710284366
 
